Feature/networking (#8)
* Add db and network datasources

* Add room

* Add Datasources to. interactors

* diskDataSource

* implement room layer

* Move files and add retrofit

* update openapi implement api's

* Finish network layer
