# app/src/main/java/ml/mylittlebackend/jji6wk/data/network/model/NetworkAuthRequest.kt
@@ -1,0 +1,9 @@
+package ml.mylittlebackend.jji6wk.data.network.model
+
+import com.squareup.moshi.JsonClass
+
+@JsonClass(generateAdapter = true)
+data class NetworkAuthRequest(
+    val username: String,
+    val password: String
+)
